--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section class="my-5">
         <h3 class="mb-1">5-Day Forecast</h3>
     <div class="sub-section">
-        <div class="col-md-1"> All days</div>
+        <div class="col-md-1 all-day"> All days</div>
         <div class="col-md-1 head-date"> 26 Oct Mon </div>
         <div class="col-md-1 head-date"> 27 Oct Mon </div>
         <div class="col-md-1 head-date"> 28 Oct Mon </div>
